# nasa-science-repo-benchmark

./: .gitignore  README.md  main.py  main_code.py  pyproject.toml
data/: nasa-science-github-repos-smes.csv
results/: bm25_benchmark_results_by_division.csv  code_bm25_benchmark_results_by_division.csv  code_bm25_benchmark_results_by_programming_language.csv  code_bm25_benchmark_results_by_query_type.csv  code_bm25_benchmark_results_overall.csv  code_embedding_Qwen-Qwen3-Embedding-0.6B_benchmark_results_by_division.csv  code_embedding_Qwen-Qwen3-Embedding-0.6B_benchmark_results_by_programming_language.csv  code_embedding_Qwen-Qwen3-Embedding-0.6B_benchmark_results_by_query_type.csv  code_embedding_Qwen-Qwen3-Embedding-0.6B_benchmark_results_overall.csv  code_embedding_Salesforce-SFR-Embedding-Code-400M_R_benchmark_results_by_division.csv  code_embedding_Salesforce-SFR-Embedding-Code-400M_R_benchmark_results_by_programming_language.csv  code_embedding_Salesforce-SFR-Embedding-Code-400M_R_benchmark_results_by_query_type.csv  code_embedding_Salesforce-SFR-Embedding-Code-400M_R_benchmark_results_overall.csv  code_embedding_nasa-impact-indus-sde-st-v0.2_benchmark_results_by_division.csv  code_embedding_nasa-impact-indus-sde-st-v0.2_benchmark_results_by_programming_language.csv  code_embedding_nasa-impact-indus-sde-st-v0.2_benchmark_results_by_query_type.csv  code_embedding_nasa-impact-indus-sde-st-v0.2_benchmark_results_overall.csv  code_embedding_nasa-impact-nasa-smd-ibm-st-v2_benchmark_results_by_division.csv  hybrid-rerank_all-MiniLM-L6-v2_benchmark_results_by_division.csv  (+10 more)
(+23 files in other folders)
