[project]
name = "code-search-experiments"
version = "0.1.0"
description = "NASA Science Repos Benchmark with multiple text views for retrieval evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.20.0",
    "bm25s>=0.2.14",
    "accelerate>=1.12.0",
    "deepspeed>=0.18.4",
    "peft>=0.18.1"

]
